--- a/supplemental-ui/partials/footer-content.hbs
+++ b/supplemental-ui/partials/footer-content.hbs
@@ -1,7 +1,5 @@
 <footer class="footer">
-  <p>Copyright © <a href="https://opendevise.com">OpenDevise Inc.</a> and individual contributors to <a href="https://antora.org">Antora</a>. Site deploys by <a href="https://netlify.com">Netlify</a>.</p>
-  <p>Except where otherwise noted, docs.antora.org, Antora, and the Antora UI, are licensed under the <a href="https://www.mozilla.org/en-US/MPL/2.0/">Mozilla Public License Version 2.0</a> (MPL-2.0).</p>
-  <p>AsciiDoc® is a trademark of the Eclipse Foundation, Inc.</p>
+  <p>This website was built using <a href="https://antora.org/">Antora</a></p>
 </footer>
 {{#if env.ALGOLIA_API_KEY}}
 <script src="{{uiRootPath}}/js/vendor/docsearch.min.js"></script>
