--- a/supplemental-ui/partials/header-content.hbs
+++ b/supplemental-ui/partials/header-content.hbs
@@ -4,7 +4,7 @@
       <div class="navbar-item">
         <a href="https://antora.org">Antora</a>
         <span class="separator">//</span>
-        <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Docs</a>
+        <a href="{{or site.url (or siteRootUrl siteRootPath)}}">Personal Notes</a>
       </div>
       {{#if (or env.ALGOLIA_API_KEY env.SITE_SEARCH_PROVIDER)}}
       <div class="navbar-item search hide-for-print">
@@ -19,39 +19,6 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="https://gitlab.com/antora">Projects</a>
-          <div class="navbar-dropdown">
-            <div class="navbar-item"><strong>Core</strong></div>
-            <a class="navbar-item" href="https://gitlab.com/antora/antora">Repository</a>
-            <a class="navbar-item" href="https://gitlab.com/antora/antora/issues">Issue Tracker</a>
-            <hr class="navbar-divider">
-            <div class="navbar-item"><strong>Default UI</strong></div>
-            <a class="navbar-item" href="https://gitlab.com/antora/antora-ui-default">Repository</a>
-            <a class="navbar-item" href="https://gitlab.com/antora/antora-ui-default/issues">Issue Tracker</a>
-            <hr class="navbar-divider">
-            <a class="navbar-item" href="https://gitlab.com/antora/antora/blob/main/contributing.adoc">Contributing</a>
-          </div>
-        </div>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <div class="navbar-link">Tooling</div>
-          <div class="navbar-dropdown is-right">
-            <div class="navbar-item"><strong>Build Automation</strong></div>
-            <a class="navbar-item has-label" href="https://hub.docker.com/r/antora/antora">Docker Image <small>OCI</small></a>
-            <a class="navbar-item has-label" href="https://gitlab.com/antora/gradle-antora-plugin">Gradle Plugin <small>Java</small></a>
-            <hr class="navbar-divider">
-            <div class="navbar-item"><strong>Authoring / Preview</strong></div>
-            <a class="navbar-item has-label" href="https://intellij-asciidoc-plugin.ahus1.de/docs/users-guide/features/advanced/antora.html">AsciiDoc Plugin <small>IntelliJ</small></a>
-          </div>
-        </div>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="{{{relativize (resolvePageURL 'antora::project/get-help.adoc')}}}">Community</a>
-          <div class="navbar-dropdown is-right">
-            <a class="navbar-item has-label" href="https://chat.antora.org">Chat <small>Zulip</small></a>
-            <a class="navbar-item has-label" href="https://twitter.com/antoraproject">News <small>Twitter</small></a>
-            <a class="navbar-item" href="https://gitlab.com/antora/antora/-/blob/main/CODE-OF-CONDUCT.adoc">Code of Conduct</a>
-          </div>
-        </div>
         <a class="navbar-item" href="https://github.com/Klopfy">
           <span class="icon">
             <svg aria-hidden="true" class="octicon octicon-mark-github" height="24" version="1.1" viewBox="0 0 16 16" width="24">
